[gd_scene load_steps=15 format=2]

[ext_resource path="res://MiniScenes/InputController.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Plain.png" type="Texture" id=2]
[ext_resource path="res://Sprites/BattleLog.png" type="Texture" id=3]
[ext_resource path="res://Sprites/PlainBlue.png" type="Texture" id=4]
[ext_resource path="res://Sprites/PlainDarkGray.png" type="Texture" id=5]
[ext_resource path="res://Scripts/PlayerInput.gd" type="Script" id=6]
[ext_resource path="res://Scripts/BattleLogic.gd" type="Script" id=7]
[ext_resource path="res://MiniScenes/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/PlayerUI.gd" type="Script" id=9]
[ext_resource path="res://MiniScenes/HP.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/Full.png" type="Texture" id=11]
[ext_resource path="res://MiniScenes/Shield.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/RemainingLabel.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Dialog.gd" type="Script" id=14]

[node name="World" type="Node2D"]

[node name="Dialog" type="CanvasLayer" parent="."]
script = ExtResource( 14 )

[node name="Hider" type="TextureRect" parent="Dialog"]
visible = false
margin_left = 1.0
margin_top = 1.0
margin_right = 1028.0
margin_bottom = 598.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextArea" type="RichTextLabel" parent="Dialog"]
visible = false
margin_left = 330.0
margin_top = 241.0
margin_right = 671.0
margin_bottom = 303.0
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NextPrompt" type="Label" parent="Dialog"]
visible = false
margin_left = 501.0
margin_top = 307.0
margin_right = 651.0
margin_bottom = 321.0
text = "Press any button  to continue"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BattleLogic" type="Node" parent="."]
script = ExtResource( 7 )

[node name="BattleLog" type="Control" parent="BattleLogic"]
margin_left = 760.0
margin_top = 3.0
margin_right = 1019.0
margin_bottom = 514.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="BattleLogic/BattleLog"]
anchor_left = 0.486
anchor_top = 0.5
anchor_right = 0.486
anchor_bottom = 0.5
margin_left = -108.874
margin_top = -173.5
margin_right = 109.126
margin_bottom = 227.5
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleText" type="RichTextLabel" parent="BattleLogic/BattleLog/TextureRect2"]
anchor_left = 0.55
anchor_top = 0.5
anchor_right = 0.55
anchor_bottom = 0.5
margin_left = -115.9
margin_top = -192.5
margin_right = 99.1
margin_bottom = 187.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BattleLogic/BattleLog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.5
margin_top = -251.5
margin_right = 105.5
margin_bottom = -172.5
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInput" type="Node" parent="BattleLogic"]
script = ExtResource( 6 )

[node name="AttackInputController" parent="BattleLogic/PlayerInput" instance=ExtResource( 1 )]
position = Vector2( 106, 516 )
TITLE = "Attack"
tag = "Attack"

[node name="DefendInputController2" parent="BattleLogic/PlayerInput" instance=ExtResource( 1 )]
position = Vector2( 248, 515 )
TITLE = "Defend"
tag = "Defend"

[node name="StealInputController3" parent="BattleLogic/PlayerInput" instance=ExtResource( 1 )]
position = Vector2( 388, 515 )
TITLE = "Steal"
tag = "Steal"

[node name="DoubleAttackInputSelector" parent="BattleLogic/PlayerInput" instance=ExtResource( 1 )]
position = Vector2( 517, 513 )
TITLE = "Double Attack"
tag = "DoubleAttack"

[node name="ReadyButton" type="Control" parent="BattleLogic/PlayerInput"]
margin_left = 791.0
margin_top = 497.0
margin_right = 989.0
margin_bottom = 537.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="BattleLogic/PlayerInput/ReadyButton"]
margin_right = 196.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="BattleLogic/PlayerInput/ReadyButton"]
margin_left = 72.0
margin_top = 16.0
margin_right = 112.0
margin_bottom = 30.0
text = "Ready"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionalPos1" type="Control" parent="BattleLogic/PlayerInput"]
margin_left = 339.0
margin_top = 517.0
margin_right = 379.0
margin_bottom = 557.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionalPos2" type="Control" parent="BattleLogic/PlayerInput"]
margin_left = 442.0
margin_top = 515.0
margin_right = 482.0
margin_bottom = 555.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionalPos3" type="Control" parent="BattleLogic/PlayerInput"]
margin_left = 544.0
margin_top = 512.0
margin_right = 584.0
margin_bottom = 552.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemainingLabel" type="Label" parent="BattleLogic/PlayerInput"]
margin_left = 15.0
margin_top = 379.0
margin_right = 97.0
margin_bottom = 393.0
text = "Remaining: x"
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BattleLogic/PlayerInput/RemainingLabel"]
margin_left = 5.0
margin_top = -8.0
margin_right = 69.0
margin_bottom = 56.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" parent="." instance=ExtResource( 8 )]

[node name="Player" type="Control" parent="."]
margin_left = 135.0
margin_top = 286.0
margin_right = 175.0
margin_bottom = 326.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayNameLabel" type="Label" parent="Player"]
margin_right = 40.0
margin_bottom = 14.0
text = "Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" parent="Player" instance=ExtResource( 10 )]
margin_left = 1.0
margin_top = 1.0
margin_right = 41.0
margin_bottom = 41.0

[node name="Shield" parent="Player" instance=ExtResource( 12 )]

[node name="LabelSpawnPos" type="Control" parent="Player"]
margin_left = 1.0
margin_top = -16.0
margin_right = 41.0
margin_bottom = 24.0
